<resources>
    <string name="app_name">CeeDee</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="login_logo">Login logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="required">Required</string>
    <string name="email">Email</string>

    <!-- Disks-related features -->
    <string name="disk_titles">Disk Titles</string>
    <string name="disks">Disks</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="cart">Cart</string>
    <string name="more">More</string>
    <string name="sort_by">Sort by</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="name">Name</string>
    <string name="cd_amount">CD amount</string>
    <string name="genre">Genre</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_cd_amount">Sort by CD amount</string>
    <string name="filter_by_genre">Filter by Genre</string>

    <!-- Report-related features -->
    <string name="report_start_month">Start month</string>
    <string name="report_end_month">End month</string>
    <string name="chart_type">Chart type</string>
    <string name="bar_chart">Bar chart</string>
    <string name="line_chart">Line chart</string>
    <string name="print">Print</string>
    <string name="chart_print_note">Only the visible part of the chart will be printed, please zoom out if you want to print the whole chart</string>
    <string name="end_time">End time</string>
    <string name="add_to_import">Add to import</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="options">Options</string>
    <string name="sort_by_genre">Sort by genre</string>
    <string name="sort_by_status">Sort by status</string>
    <string name="disk_amount_by_genre">Disk amount by genre</string>
    <string name="disk_amount_by_status">Disk amount by status</string>
    <string name="total_rentals_by_genre">Total rentals by genre</string>
    <string name="revenue_and_expenses">Revenue and Expenses</string>
    <string name="start_time">Start time</string>
    <string name="Import">Import</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="req_sent">Req sent:</string>
    <string name="new_requisition">New requisition</string>
    <string name="name_colon">Name:</string>
    <string name="email_colon">Email:</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_email">Supplier email</string>
    <string name="disks_to_rent">Disks to Rent</string>
    <string name="amount">Amount:</string>
    <string name="_0_cd">0 CD</string>
    <string name="disk_title">Disk Title</string>
    <string name="author">Author</string>
    <string name="total_payment">Total payment</string>
    <string name="payment">Payment</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="all">All</string>
    <string name="minus">Minus</string>
    <string name="plus">Plus</string>
    <string name="default_disk_to_import_count">1</string>
    <string name="choose_disk_titles_to_import">Choose Disk Titles to Import</string>
    <string name="proceed">Proceed</string>
    <string name="send_an_email">Send an email</string>
    <string name="complete_sending_requisition">Complete sending requisition</string>
    <string name="import_icon">Import icon</string>
    <string name="set_status">Set status</string>
    <string name="return_disks">Return disks</string>
    <string name="customer">Customer</string>
    <string name="customer_name">Customer name</string>
    <string name="phone_colon">Phone:</string>
    <string name="address">Address:</string>
    <string name="customer_address">Customer address</string>
    <string name="customer_phone">Customer phone</string>
    <string name="total">Total</string>
    <string name="rent_date_colon">Rent date:</string>
    <string name="due_date_colon">Due date:</string>
    <string name="overdue_colon">Overdue:</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="we_will_send_you_an_otp_to_this_phone_number">We will send you an OTP to this phone number</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_the_verification_code_sent_to_your_phone">Enter the verification code sent to your phone</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="address_without_colon">Address</string>
    <string name="in_progress">In progress</string>
    <string name="in_request">In request</string>
    <string name="overdue">Overdue</string>
    <string name="complete">Complete</string>
    <string name="supplier_email_no_colon">Supplier email</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="disks_to_import">Disks to Import</string>
    <string name="request_accepted">Request accepted</string>
</resources>