<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/menu_disk_titles_search"
        android:icon="@drawable/ic_round_search_24"
        android:orderInCategory="100"
        app:iconTint="@color/white"
        android:title="@string/search"
        app:showAsAction="always"
        tools:targetApi="o"
        tools:ignore="AlwaysShowAction"
        app:actionViewClass="android.widget.SearchView">

    </item>

    <item
        android:id="@+id/menu_disk_titles_filter"
        android:icon="@drawable/ic_round_filter_alt_24"
        android:orderInCategory="102"
        android:title="@string/sort_by"
        tools:targetApi="o"
        android:visible="true"
        app:showAsAction="always">
        <menu>
            <item android:title="@string/sort_by_name"
                >
                <menu>
                    <item
                        android:id="@+id/menu_disk_title_tab_sort_by_name_ascending"
                        android:title="@string/ascending" />

                    <item
                        android:id="@+id/menu_disk_title_tab_sort_by_name_descending"
                        android:title="@string/descending" />
                </menu>
            </item>

            <item android:title="@string/sort_by_cd_amount"
                >
                <menu>
                    <item
                        android:id="@+id/menu_disk_title_tab_sort_by_CD_amount_ascending"
                        android:title="@string/ascending" />

                    <item
                        android:id="@+id/menu_disk_title_tab_sort_by_CD_amount_descending"
                        android:title="@string/descending" />
                </menu>
            </item>
        </menu>
    </item>

    <item
        android:id="@+id/menu_disk_titles_add"
        android:icon="@drawable/ic_round_add_24"
        android:orderInCategory="102"
        android:title="@string/sort_by"
        tools:targetApi="o"
        android:visible="true"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_disk_titles_add_genre"
                android:title="Add new genre"
                />
            <item
                android:id="@+id/menu_disk_titles_add_supplier"
                android:title="Add new supplier"
                />
            <item
                android:id="@+id/menu_disk_titles_add_disk_title"
                android:title="Add new disk title"
                />
        </menu>
    </item>


    <item
        android:id="@+id/menu_disk_titles_cart"
        android:icon="@drawable/ic_round_shopping_cart_24"
        android:orderInCategory="104"
        android:title="@string/cart"
        app:showAsAction="always"
        tools:targetApi="o">
    </item>

</menu>