<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_rpdiskfragment_options"
        android:icon="@drawable/ic_round_more_vert_24"
        android:title="@string/options"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_item_rpdiskfragment_genre"
                android:icon="@drawable/ic_baseline_playlist_play_24"
                android:title="@string/sort_by_genre" />
            <item
                android:id="@+id/menu_item_rpdiskfragment_status"
                android:icon="@drawable/ic_round_info_24"
                android:title="@string/sort_by_status" />
        </menu>
    </item>
</menu>