<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_disks_search"
        android:icon="@drawable/ic_round_search_24"
        android:orderInCategory="100"
        app:iconTint="@color/black"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"
        tools:targetApi="o">

    </item>

    <item
        android:id="@+id/menu_disks_tab_filter"
        android:icon="@drawable/ic_app_logo"
        android:iconTint="@color/white"
        android:orderInCategory="102"
        android:title="@string/filter"
        android:visible="false"
        app:showAsAction="always"
        tools:targetApi="o">

    </item>

    <item
        android:id="@+id/menu_disks_cart"
        android:icon="@drawable/ic_round_shopping_cart_24"
        android:orderInCategory="104"
        android:title="@string/cart"
        app:iconTint="@color/white"
        app:showAsAction="always"
        tools:targetApi="o"></item>

</menu>