<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="?attr/selectableItemBackground"
    android:orientation="horizontal">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageview_disk_cover"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_weight="3"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_app_logo"
        app:shapeAppearanceOverlay="@style/roundedCornerImageView" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="0dp">

        <TextView
            android:id="@+id/textview_disk_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/disk_title"
            android:textColor="#474646"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_disk_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/author"
            android:textColor="#474646"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/amount"
                android:textColor="#474646"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textview_disk_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_cd"
                android:textColor="#474646"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
